--- a/allenamento/HTML-CSS/lp250126/css/styles.css
+++ b/allenamento/HTML-CSS/lp250126/css/styles.css
@@ -42,7 +42,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 img {
